palette information displays properly

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <title>ColourLovers Live</title>
   </head>
   <body>
